--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>Hello!</h1>
+  <p>Testando</p>
   <p>This is my future personal web site. Nothing to show yet. Sorry.</p>
 </body>
 </html>
